# bca-website

./: .coveragerc  .djlintrc  .dockerignore  .editorconfig  .editorconfig-checker.json  .env.template  .gitignore  .pg_service.conf.template  .pgpass.template  .pylintrc  .stylelintrc.json  .super-linter.env  Dockerfile  README.md  bunfig.toml  codecov.yml  compose.e2e.yml  compose.prod.yml  compose.test.yml  compose.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  package.json  pyproject.toml  requirements.txt  requirements.txt.bak  super-linter.py  super-linter.sh  super_linter.py  superlinter.py
.github/: dependabot.yml  release.yml  super-linter-fix.env  super-linter.env
.github/linters/: .codespellrc  .editorconfig-checker.json  .jscpd.json  .lintr  .markdown-lint.yml  .pylintrc  .python-lint  .ruff.toml  .textlintrc  eslint.config.mjs  super-linter-fix.env  super-linter.env  zizmor.yaml
.github/workflows/: codeql.yml  django.yml  docker-latest.yml  docker-security.yml  end-to-end.yml  file-monitor.yml  linter.yml  python-security.yml  rest-version.yml  security.yml  super-linter.yml  tests.yml
app/: admin.py  apps.py  functions.py  managers.py  models.py  sitemaps.py  tests.py  urls.py  utils.py  views.py
app/assets/: index.ts
app/docs/: _index.md
app/docs/tutorials/: _index.md  metacell.md
app/management/commands/: createtestdb.py  factories.py
app/migrations/: 0001_initial.py  0002_alter_dataset_options_alter_domain_options_and_more.py  0002_alter_dataset_options_alter_domain_options_and_more_squashed_0009_alter_datasetqualitycontrol_value.py  0003_add_datasetfile.py  0004_gene_modules.py  0004_singlecellgeneexpressionf.py  0004_unmanage_singlecellgeneexpression.py  0005_add_indexes.py  0005_delete_singlecellgeneexpressionf_and_more.py  0006_add_publications.py  0007_add_ordering.py  0008_add_slug.py  0009_dbversion.py  0010_alter_genemodule_unique_together.py  0010_alter_genemodule_unique_together_squashed_0013_alter_genemodule_genes_genemoduleeigenvalue_and_more.py  0010_alter_genemodule_unique_together_squashed_0013_alter_genemodule_genes_genemoduleeigenvalue_and_more_squashed_0014_alter_genemodulemembership_options_and_more.py  0010_gene_modules.py  0010_improve_dbversion.py  0010_improve_gene_modules.py  0010_speciesfile_squashed_0012_datasetfile_squashed_0015_alter_speciesfile_species.py  0011_alter_genemodule_options_and_more.py  0011_improve_gene_modules.py  0012_improve_orthologs.py  0013_alter_speciesfile_type.py  0013_go_annotation.py  0014_metacelltypesimilarity.py  0014_metacelltypesimilarity_delete_samap.py  0014_trigram_extension.py
app/models/: __init__.py  materialized.py  models.py
app/reference/: index.md  test.md
app/static/app/: life.json  life.newick  site.webmanifest  style.css  styles.css
app/static/docs/: _index.md  test.md
app/systemchecks/: duplicates.py  files.py  metacellgenexpression.py  postgresql_tables.py
app/templates/: 403.html  404.html  500.html  base.html  error_page.html  favicons.html  footer.html  navbar.html  robots.txt  tracking.html
app/templates/app/: about.html  atlas.html  atlas_compare.html  atlas_gene.html  atlas_info.html  atlas_markers.html  atlas_overview.html  blog.html  comparison.html  docs.html  downloads.html  home.html  index.html  reference.html  search.html
app/templatetags/: bca_website_links.py  breadcrumbs.py  card.py  cards.py  custom_filters.py  custom_tags.py  dict_extras.py  download_links.py  entry_links.py  file_tags.py  headings.py  lists.py  section_buttons.py  string_extras.py
app/tests/: test_commands.py  test_models.py  test_systemchecks.py  test_templatetags.py  test_views.py
app/tests/views/: test_atlas_views.py  test_entry_views.py  test_views.py  utils.py
app/utils/: __init__.py  blog.py  cache.py  markdown.py  utils.py
app/views/: __init__.py  atlas_views.py  entry_views.py  misc_views.py  views.py
blog/: models.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_index_page.html  blog_page.html  home_page.html
config/: context_processors.py  models.py  pre_settings.py  settings.py  storage.py  urls.py
docker-entrypoint-initdb.d/: postgres_init.sql
e2e/: conftest.py
e2e/portal/: test_atlas.py  test_home.py  test_overview.py
ghost/: Dockerfile  default.hbs  ghost-env-vars.js
ghost/partials/: announcement-bar.hbs
ghost/partials/components/: footer.hbs  post-list.hbs  tracking.hbs
nginx/: entrypoint.sh  nginx.conf  nginx.conf.template  nginx.prod.conf  nginx.prod.conf.template
nginx/certs/: README.md
rest/: aggregates.py  filters.py  functions.py  pagination.py  renderers.py  routers.py  schema.py  serializers.py  services.py  settings.py  tests.py  urls.py  utils.py  views.py
rest/services/: __init__.py  go_enrichment.py  module_similarity.py
rest/tests/: test_enrichment.py  test_modules.py  tests.py
scripts/: add_SAMAP_to_db.py  add_data_to_db.py  add_files.py  add_gene_corr.py  add_gene_lists.py  add_gene_modules.py  check_data_files.py  createExample.R  db-compare  db-compare.py  dbcopy  dbdiff  rds2hdf5.py  rds2hdf5_example.R  run_blastp.sh  run_cytotrace.r  sbatch_SAMAP.sh  setup.sh  superlinter.py  test_rds2hdf5.py  utils.py
scripts/SAMap/: run_SAMAP.py  run_pairwise_blastp.sh  sbatch_SAMAP.sh  sbatch_SAM_files.sh
scripts/data/: add_SAMAP_to_db.py  add_data_to_db.py  add_files.py  add_gene_corr.py  add_gene_modules.py  check_data_files.py  run_cytotrace.r
scripts/hdf5/: rds2hdf5.py  rds2hdf5_example.R  test_rds2hdf5.py
scripts/tests/: build_go_obo.py
scripts/utils/: db-compare.py  db-copy.py  project.py
web_app/: admin.py  apps.py  models.py  urls.py  views.py
web_app/migrations/: 0001_initial.py  0002_rename_value_metacellgeneexpression_fold_change.py  0003_metacellgeneexpression_umifraq_and_more.py  0004_rename_umifraq_metacellgeneexpression_umifrac.py  0005_metacellgeneexpression_umiraw.py  0006_rename_umiraw_metacellgeneexpression_umi_raw.py
web_app/static/: life.json
web_app/templates/: 500.html  base.html  footer.html  navbar.html
web_app/templatetags/: custom_tags.py
(+308 files in other folders)
