[project]
name = "bca-data-portal"
dynamic = ["version"]
requires-python = ">=3.13"

authors = [
    {name = "Nuno Saraiva Agostinho", email = "nuno.agostinho@crg.eu"},
    {name = "Andrés Becerra Sandoval", email = "andres.becerra@crg.eu"},
    {name = "Clemente Borges Perdomo", email = "clemente.borges@crg.eu"},
    {name = "Antonio Hermoso Pulido", email = "toni.hermoso@crg.eu"},
]
maintainers = [
    {name = "Nuno Saraiva Agostinho", email = "nuno.agostinho@crg.eu"},
    {name = "Andrés Becerra Sandoval", email = "andres.becerra@crg.eu"},
]

description = "Explore and download single-cell datasets across the eukaryotic tree of life."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["biodiversity", "cell", "atlas", "single-cell", "bioinformatics", "data"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python"
]

dependencies = [
    "Django==5.2.15",
    "django-colorfield==0.14.0",
    "django-extensions==4.1",
    "gunicorn==26.0.0",
    "h5py==3.16.0",
    "psycopg[binary,pool]==3.3.4",
    "python-dateutil==2.9.0.post0",

    # Blog parsing
    "beautifulsoup4==4.15.0",
    "feedparser==6.0.12",

    # Documentation pages
    "mistune==3.2.1",
    "Pygments==2.20.0",
    "python-frontmatter==1.3.0",

    # REST
    "djangorestframework==3.17.1",
    "django-filter==25.2",
    "drf-spectacular==0.29.0",
    "drf-orjson-renderer==1.8.0",

    # GO enrichment
    "GOATOOLS==1.6.5",
    "scikit-learn==1.9.0",

    # Monitoring
    "django-prometheus==2.5.0",
]

[project.optional-dependencies]
dev = [
    "django-debug-toolbar==6.3.0",
    "djlint==1.38.1",
]

test = [
    "coverage==7.14.1",
    "factory_boy==3.3.3",
    "pytest==9.0.3",
    "pytest_django==4.12.0",
]

e2e = [
    "playwright==1.60.0",
    "pytest_playwright==0.8.0",
]

dataload = [
    "pandas==3.0.3",
    "psutil==7.2.2",
    "rds2py==0.9.1",
    "scipy==1.17.1",
]

[tool.setuptools]
py-modules = []

[tool.pytest]
DJANGO_SETTINGS_MODULE="config.settings"
testpaths = ["app/tests", "rest/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--tb=short", "--ignore=scripts", "-s"]

[tool.bandit]
skips = ["B101"]

[tool.bandit.assert_used]
skips = ["*/*test_*.py"]

[project.urls]
Homepage = "https://portal.biodiversitycellatlas.org/"
Documentation = "https://biodiversitycellatlas.org/blog/"
Repository = "https://github.com/biodiversitycellatlas/bca-website"
Issues = "https://github.com/biodiversitycellatlas/bca-website/issues"
Changelog = "https://github.com/biodiversitycellatlas/bca-website/releases"
